--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,74 @@ a{
 
 body{
     margin: 1px;
+    font-family: roboto;
 }
 
 .icone{
     margin-left: auto;
+}
+
+img{
+    width: 100%;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+main{
+    display: flex;
+    justify-content: space-around ;
+    margin: 20px;
+    align-items: flex-start;
+    
+}
+
+.left{
+
+    width: 700px;
+
+
+}
+
+.right{
+    width: 200px;
+    background-color: aliceblue;
+    padding: 10px;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 5px 5px 11px 5px rgba(0,0,0,0.3);
+}
+form{
+    
+}
+
+.flexbox{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 30px;
+}
+
+input[type=submit] {
+
+    width: 100%;
+    padding: 10px;
+    margin-top: 20px;
+    background-color: blue;
+    color: white;
+    border: solid;
+    font-size: 20px;
+}
+
+
+.number{
+    display: flex;
+    margin-top: 10px;
+}
+
+
+.price{
+    color: red;
+    font-size: 20px;
 }
