--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,8 @@ input[type=submit] {
 
 .number{
     display: flex;
-    margin-top: 10px;
+    margin-top: 20px;
+    justify-content: center;
 }
 
 
